platform/kafka/enable-ingress/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kafka.${wildcard_ingress_subdomain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-kafka-controller-0-external
            port:
              number: 9094
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-kafka-controller-1-external
            port:
              number: 9094
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-kafka-controller-2-external
            port:
              number: 9094
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-kafka
            port:
              number: 9092
